tests/fixtures/security/certs/invalid/missing_trust_anchor.store
store_id=missing-anchor-store
store_version=1
updated_at_utc=2026-03-11T08:30:00Z
revocation_source=file://revocation/cache/root
record|intermediates|2222222222222222222222222222222222222222222222222222222222222222|CN=Intermediate CA|CN=Root CA|intermediate|2026-01-01T00:00:00Z|2030-01-01T00:00:00Z|1001
record|device_certs|3333333333333333333333333333333333333333333333333333333333333333|CN=Media Server|CN=Intermediate CA|client|2026-01-01T00:00:00Z|2028-01-01T00:00:00Z|1002
